--- a/index.html
+++ b/index.html
@@ -10,6 +10,27 @@
     <link rel="stylesheet" href="./assets/css/style.css">
 </head>
 <body>
-    <h1>Flower Shop</h1>   
+    <!-- start Navigation -->
+    <header>
+        <nav>
+            <div class="logo">
+                <img src="./assets/images/logo.png" alt="" class="logo-img">
+            </div>
+            <div class="menus">
+                <ul>
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="#">About</a></li>
+                    <li><a href="#">Flower Category</a></li>
+                    <li><a href="#">Contacts</a></li>
+                </ul>
+            </div>
+        </nav>
+    </header> 
+    <main>
+        
+    </main> 
+    <footer>
+
+    </footer>
 </body>
 </html>
