--- a/index.html
+++ b/index.html
@@ -27,7 +27,18 @@
         </nav>
     </header> 
     <main>
-        
+        <section class="banner">
+            <div class="banner-container">
+                <div class="banner-content">
+                    <h1 class="banner-title">Let's make <br> beautiful flowers a <br> part of your life.</h1>
+                    <p class="banner-desc">Hymenaeos! Omnis arcu vitae? Phasellus irure cupidatat incidunt, semper metus, nibh adipisci assumenda odio, quos, senectus vehicula occaecat, officiis malesuada cras.</p>
+                    <button class="btn-primary">Shop Now</button>
+                </div>
+                <div class="banner-image">
+                    <img src="./assets/images/pngwing 10.png" alt="">
+                </div>
+            </div>
+        </section>
     </main> 
     <footer>
 
