--- a/index.html
+++ b/index.html
@@ -39,6 +39,34 @@
                 </div>
             </div>
         </section>
+        <section class="feature">
+            <div class="feature-container">
+                <div class="feature-content">
+                    <h3 class="section-title feature-title">Our Featured Flowers</h3>
+                    <p class="feature-desc">It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.</p>
+                </div>
+                <div class="feature-box">
+                    <div class="feature-card">
+                        <div class="feature-card-details card-details-1">
+                            <img src="./assets/images/pngwing 6.png" alt="" class="feature-image">
+                        </div>
+                        <h4 class="image-caption">Pink Flower Tree</h4>
+                    </div>
+                    <div class="feature-card">
+                        <div class="feature-card-details card-details-2">
+                            <img src="./assets/images/pngwing 6.png" alt="" class="feature-image">
+                        </div>
+                        <h4 class="image-caption">Pink Flower Tree</h4>
+                    </div>
+                    <div class="feature-card">
+                        <div class="feature-card-details card-details-3">
+                            <img src="./assets/images/pngwing 6.png" alt="" class="feature-image">
+                        </div>
+                        <h4 class="image-caption">Pink Flower Tree</h4>
+                    </div>
+                </div>
+            </div>
+        </section>
     </main> 
     <footer>
 
