--- a/index.html
+++ b/index.html
@@ -67,6 +67,23 @@
                 </div>
             </div>
         </section>
+        <section class="small-banner">
+            <div class="small-banner-container">
+                <div class="small-banner-content">
+                    <img src="./assets/images/Group 57.png" alt="">
+                    <p class="small-banner-desc">Same Day Delivery. Click & Collect.</p>
+                </div>
+                <div class="small-banner-content">
+                    <img src="./assets/images/Group 58.png" alt="">
+                    <p class="small-banner-desc">Fresh Flowers. Local Growers.</p>
+                </div>
+                <div class="small-banner-content">
+                    <img src="./assets/images/Group 59.png" alt="">
+                    <p class="small-banner-desc">24/7 Free Support.</p>
+                </div>
+            </div>
+        </section>
+
     </main> 
     <footer>
 
