added Hotdeal Section

--- a/index.html
+++ b/index.html
@@ -83,6 +83,26 @@
                 </div>
             </div>
         </section>
+        <section class="hotdeal">
+            <div class="hotdeal-container">
+                <div class="hotdeal-content">
+                    <h1 class="hotdeal-title">Hot Deal ! Sale Up To 25% Off</h1>
+                    <p class="hotdeal-desc">It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.</p>
+                    <button style="color: white;" class="btn-primary">Sign up</button>
+                </div>
+                <div class="hotdeal-image">
+                    <img src="./assets/images/pngwing 8.png" alt="">
+                </div>
+            </div>
+        </section>
+        <section class="instagram">
+            <div class="instagram-container">
+                <div class="instagram-content">
+                    <h1 class="section-title instagram-title">Instagram</h1>
+                    <p class="instagram-desc"></p>
+                </div>
+            </div>
+        </section>
 
     </main> 
     <footer>
