added Instagram & Subscriber Section

--- a/index.html
+++ b/index.html
@@ -26,7 +26,9 @@
             </div>
         </nav>
     </header> 
+    <!-- End Navigation -->
     <main>
+        <!-- Start Banner -->
         <section class="banner">
             <div class="banner-container">
                 <div class="banner-content">
@@ -39,6 +41,8 @@
                 </div>
             </div>
         </section>
+        <!-- End Banner -->
+        <!-- Start Feature -->
         <section class="feature">
             <div class="feature-container">
                 <div class="feature-content">
@@ -67,6 +71,8 @@
                 </div>
             </div>
         </section>
+        <!-- End Feature -->
+        <!-- Start Small Banner -->
         <section class="small-banner">
             <div class="small-banner-container">
                 <div class="small-banner-content">
@@ -83,6 +89,8 @@
                 </div>
             </div>
         </section>
+        <!-- End Small Banner -->
+        <!-- Start Hotdeal -->
         <section class="hotdeal">
             <div class="hotdeal-container">
                 <div class="hotdeal-content">
@@ -95,18 +103,40 @@
                 </div>
             </div>
         </section>
+        <!-- End HOtdeal -->
+        <!-- Start Instagram -->
         <section class="instagram">
             <div class="instagram-container">
                 <div class="instagram-content">
                     <h1 class="section-title instagram-title">Instagram</h1>
-                    <p class="instagram-desc"></p>
+                    <p class="instagram-desc">It is a long established fact that a reader will be distracted by the readable <br> content of a page when looking at its layout.</p>
+                </div>
+                <div class="instagram-images">
+                    <img src="./assets/images/Flower 01.png" alt="">
+                    <img src="./assets/images/Rectangle 4.png" alt="">
+                    <img src="./assets/images/Rectangle 5.png" alt="">
+                    <img src="./assets/images/Rectangle 6.png" alt="">
                 </div>
             </div>
         </section>
-
+        <!-- End Instagram -->
+        <!-- Start Subscriber -->
+        <section class="subscriber">
+            <div class="subscriber-container">
+                <div class="subscriber-content">
+                    <h1 class="subscriber-title">Get The Latest Deals</h1>
+                    <p class="subscriber-desc">$30 coupon for first shopping</p>
+                </div>
+                <div class="subscriber-form">
+                    <input type="text" name="subscriber" id="" placeholder="Enter Your Email">
+                    <input class="btn-primary" type="button" value="Subscriber">
+                </div>
+            </div>
+        </section>
+        <!-- End Subscriber -->
     </main> 
     <footer>
-
+        
     </footer>
 </body>
 </html>
