added Footer Section

--- a/index.html
+++ b/index.html
@@ -58,13 +58,13 @@
                     </div>
                     <div class="feature-card">
                         <div class="feature-card-details card-details-2">
-                            <img src="./assets/images/pngwing 6.png" alt="" class="feature-image">
+                            <img src="./assets/images/pngwing 5.png" alt="" class="feature-image" style="position: relative; bottom: 30px;">
                         </div>
-                        <h4 class="image-caption">Pink Flower Tree</h4>
+                        <h4 class="image-caption">Pink Flower Tree</h4> 
                     </div>
                     <div class="feature-card">
                         <div class="feature-card-details card-details-3">
-                            <img src="./assets/images/pngwing 6.png" alt="" class="feature-image">
+                            <img src="./assets/images/pngwing 7.png" alt="" class="feature-image">
                         </div>
                         <h4 class="image-caption">Pink Flower Tree</h4>
                     </div>
@@ -136,7 +136,11 @@
         <!-- End Subscriber -->
     </main> 
     <footer>
-        
+        <div class="footer-container">
+            <h2 class="footer-title"><span>Flower</span> Shop</h2>
+            <p class="footer-desc">It is a long established fact that a reader will be distracted by the readable <br> content of a page when looking at its layout.</p>
+            <div class="copyright"><small>copyright &copy; 2020-2023, FlowerShop.com. All rights reserved. </small></div>
+        </div>
     </footer>
 </body>
 </html>
